@@ -184,7 +184,7 @@ TODO:
 - ??? UTF-8 support and ODBC wide-char functions ???
 
 
-June, 4th, 2002
+June, 9th, 2002
 Christian Werner
 mailto:chw@ch-werner.de
 
