@@ -1,5 +1,5 @@
 %define name sqliteodbc
-%define version 0.42
+%define version 0.43
 %define release 1
 
 Name: %{name}
